--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@
 
 
 <!-- 
-<!DOCTYPE html>
-<html>
-    <body>
-        <div id="root"></div>
-    </body>
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    222
 
     <script>
         const root = document.getElementById("root");
@@ -75,33 +69,21 @@
         
         ReactDom.render(container, root);
     </script>
-</html>  
 
 -->
 
 
 
 <!-- 
+    111
 
-first
-
-<!DOCTYPE html>
-<html>
-    <body>
-        <span>Total clicks: 0</span>
-        <button id="btn">CLick me</button>
-    </body>
-    
     <script>
-        let counter = 0;
-        const button = document.getElementById("btn");
-        const span = document.querySelector("span");
-        function handleClick() {
-            counter = counter + 1;
-            span.innerText = `Total clicks: ${counter}`;
-        }
-        button.addEventListener("click", handleClick);
-
+        const root = document.getElementById("root");
+        const span = React.createElement(
+            "span", 
+            { id:"sexy-span", style: {color: "red"} }, 
+            "Hello I'm a span"
+        );
+        ReactDom.render(span, root);
     </script>
-</html> 
 -->
