--- a/example/4_render_with_babel.html
+++ b/example/4_render_with_babel.html
@@ -6,8 +6,7 @@
     </body>
 
     <!--
-        add react : https://reactjs.org/docs/add-react-to-a-website.html
-        babel (jsx) : https://babeljs.io/docs/en/
+        - 바벨로 만든 엘리멘트와 이벤트에 대해, 리렌더링 하는 방법
     -->
 
     <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
@@ -18,20 +17,24 @@
         const root = document.getElementById("root");
         let counter = 0;
 
-        function App() {
-            const [counter, setCounter] = React.useState(0);
-            const onClick = () => {
-                setCounter(counter + 1);
-            }
+        function countUp() {
+            counter = counter + 1;
+            render();
+        }
 
+        function render() {
+            ReactDOM.render(<Container />, root);
+        }
+
+        function Container() {
             return (
                 <div>
                     <h3>Total clicks: {counter}</h3>
-                    <button onClick={onClick}>Click me</button>
+                    <button onClick={countUp}>Click me</button>
                 </div>
             );
         }
         
-        ReactDOM.render(<App />, root);
+        render();
     </script>
-</html>
+</html> 
