--- a/example/vanilla.html
+++ b/example/vanilla.html
@@ -4,6 +4,10 @@
         <span>Total clicks: 0</span>
         <button id="btn">CLick me</button>
     </body>
+
+    <!--
+        - 바닐라 JS 로 만든 샘플 페이지
+    -->
     
     <script>
         let counter = 0;
