--- a/example/1_create_element.html
+++ b/example/1_create_element.html
@@ -1,4 +1,7 @@
-
+<!--
+    react : https://reactjs.org/docs/add-react-to-a-website.html
+    babel (jsx) : https://babeljs.io/docs/en/
+-->
 <!DOCTYPE html>
 <html>
     <body>
