--- a/example/3_create_element_with_babel.html
+++ b/example/3_create_element_with_babel.html
@@ -1,4 +1,7 @@
-
+<!--
+    react : https://reactjs.org/docs/add-react-to-a-website.html
+    babel (jsx) : https://babeljs.io/docs/en/
+-->
 <!DOCTYPE html>
 <html>
     <body>
