--- a/example/6_render_using_state.html
+++ b/example/6_render_using_state.html
@@ -1,4 +1,7 @@
-
+<!--
+    react : https://reactjs.org/docs/add-react-to-a-website.html
+    babel (jsx) : https://babeljs.io/docs/en/
+-->
 <!DOCTYPE html>
 <html>
     <body>
@@ -6,8 +9,8 @@
     </body>
 
     <!--
-        add react : https://reactjs.org/docs/add-react-to-a-website.html
-        babel (jsx) : https://babeljs.io/docs/en/
+        - 바벨로 만든 엘리멘트와 이벤트에 대해, 좀더 멋지게 리렌더링 하는 방법
+        - state 사용하기
     -->
 
     <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
