--- a/example/8_state_practice.html
+++ b/example/8_state_practice.html
@@ -9,8 +9,10 @@
     </body>
 
     <!--
-        - select 를 통해 state 의 상태값을 변경할 수 있음
-        - state 의 상태값의 변화에 따라 UI 를 변경할 수 있음
+        - state 의 값의 형태는 any
+        - 이벤트를 통해서 state 의 값을 변경할 수 있음
+        - true/false 등을 통해 태그의 상태값들을 바꿀수 있음
+        - 작업한 내용은 함수 형태로 전체 렌더링에 포함할 수 있음
     -->
 
     <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
@@ -58,27 +60,11 @@
                 </div>
             );
         }
-        function KmToMiles() {
-            return <h3>KM 2 Miles</h3>
-        }
         function App() {
-            const [index, setIndex] = React.useState("xx");
-            const onSelect = (event) => {
-                setIndex(event.target.value);
-            }
             return (
                 <div>
                     <h1>Super Converter</h1>
-                    <select value={index} onChange={onSelect}>
-                        <option value="xx">Select your units</option>
-                        <option value="0">Minutes & Hours</option>
-                        <option value="1">Km & Miles</option>
-                    </select>
-
-                    <hr/>
-
-                    {index === "0" ? <MinutesToHours/> : null }
-                    {index === "1" ? <KmToMiles/> : null }
+                    <MinutesToHours />
                 </div>
             )
         };
