--- a/example/11_memo.html
+++ b/example/11_memo.html
@@ -9,16 +9,13 @@
     </body>
 
     <!--
-        propTypes 용 코드 추가 : https://unpkg.com/prop-types@15.7.2/prop-types.js
-        
-        작성하고자 하는 props 에 타입을 지정해줄 수 있음.
-        .isRequired 가 붙으면 필수값, 없으면 옵셔널
+        Btn 으로 해둘 경우 changeValue 가 실행될때, re-render 되면서 Btn 둘다 새로고침
+        그런데 아래와 같이 Memo 해둔 컴포넌트를 사용하면, 값이 변경되지 않으면 새로고치지 않음.
     -->
 
-    <script src="https://unpkg.com/react@17.0.2/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script type="text/babel">
         function Btn(props) {
@@ -31,24 +28,21 @@
                         padding: "10px 20px",
                         border: 0,
                         borderRadius: 10,
-                        fontSize: props.fontSize
                     }}
                 >
                     {props.text}
                 </button>
             );
         }
-
-        Btn.propTypes = {
-            text: PropTypes.string.isRequired,
-            fontSize: PropTypes.number,
-        }
+        const MomorizedBtn = React.meomo(Btn);
 
         function App() {
+            const [value, setValue] = React.useState("Save Changes");
+            const changeValue = () => setValue("Revert Changes");
             return (
                 <div>
-                    <Btn text="Save Changes" fontSize={18} />
-                    <Btn text="Continue" fontSize={14} />
+                    <MomorizedBtn text={value} changeValue={changeValue}/>
+                    <MomorizedBtn text="Continue"/>
                 </div>
             )
         };
